# dephy-message-proto

./: .cjs.swcrc  .esm.swcrc  .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
proto/: message.proto
src/: index.ts
